Applied bootstrap css classes to login & home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,14 +7,14 @@
 <head>
 	<title>One Store</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	
+	<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="stylesheets/style.css" />
 	
 </head>
 <body>
 	<nav class="topright">
-		<a href="/login"><button>Sign In</button></a>
-		<a href="/registration"><button>Registration</button></a>
+		<a href="/login"><button class="btn btn-primary">Sign In</button></a>
+		<a href="/registration"><button class="btn btn-primary">Registration</button></a>
 	</nav>
 	<section id="header">
 		<header>
@@ -22,7 +22,7 @@
 			<p>Ecommerce for EveryOne</p>
 		</header>
 		<footer>
-			<a href="http://www.google.com"><button>Proceed to browse</button></a>
+			<a href="http://www.google.com"><button class="btn">Proceed to browse</button></a>
 		</footer>
 	</section>
 </body>
