--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,12 +9,13 @@
 <body>
 	<form class="well">
 		<label>E-mail</label>
-		<input type="email" ng-model="user.login.id" class="span3" />
+		<input type="email" ng-model="user.login.id" class="span3" placeholder="E-mail here..." />
 		<br>
 		<label>Password</label>
-		<input type="password" ng-model="user.login.password" class="span3" />
+		<input type="password" ng-model="user.login.password" class="span3" placeholder="Password here..."/>
 		<br>
-		<button ng-click="expression">Sign in</button>
+		<button ng-click="expression" class="btn btn-primary">Sign in</button>
+		<button class="btn" ng-click="">Clear</button>
 	</form>
 
 </body>
