--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,16 +7,18 @@
 	<script src="javascripts/angular-1.2.5/angular.js"></script>
 </head>
 <body>
-	<form class="well">
-		<label>E-mail</label>
-		<input type="email" ng-model="user.login.id" class="span3" placeholder="E-mail here..." />
-		<br>
-		<label>Password</label>
-		<input type="password" ng-model="user.login.password" class="span3" placeholder="Password here..."/>
-		<br>
-		<button ng-click="expression" class="btn btn-primary">Sign in</button>
-		<button class="btn" ng-click="">Clear</button>
-	</form>
+	<div class="span7 center">
+		<form class="well">
+			<label>E-mail</label>
+			<input type="email" ng-model="user.login.id" class="span3" placeholder="E-mail here..." />
+			<br>
+			<label>Password</label>
+			<input type="password" ng-model="user.login.password" class="span3" placeholder="Password here..."/>
+			<br>
+			<button ng-click="expression" class="btn btn-primary">Sign in</button>
+			<button class="btn" ng-click="">Clear</button>
+		</form>
+	</div>
 
 </body>
 </html>
