--- a/views/vendor-form.ejs
+++ b/views/vendor-form.ejs
@@ -1,6 +1,4 @@
-<script type="text/ng-template" id="vendor-form">
   <ng-form name="vendorForm">
-    <label >Address</label><input ng-model="user.address" type="text" required>
-    <label class="checkbox"><input type="checkbox" ng-model="user.homeDelivery" name="homeDelivery"> Home delivery service</label>
+  <label class="checkbox"><input type="checkbox" ng-model="user.homeDelivery" name="homeDelivery">Home delivery service</label>
+  <ng-include src="'/address-form'"/>
   </ng-form>
-</script>
