--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html ng-app="registration">
+<html lang='en'>
 <head>
   <title>Register to OneStore</title>
   <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/style.css" />
   <script src="javascripts/angular-1.2.5/angular.js"></script>
+  <script src="javascripts/angular-1.2.5/angular-route.js"></script>
   <script type="text/javascript" src="javascripts/controller/RegisterControl.js"></script>
  
 </head>
-<body>
-  <body ng-controller="RegisterControl">
+  <body>
     <h1>Registration</h1>
-      <form name="userInfoForm" class="well">
+      <form name="userInfoForm" class="well" ng-submit="save(user)">
         <div class="control-group" ng-class="getCssClasses(userInfoForm.email)">
           <label>E-mail</label>
           <input type="email" ng-model="user.email" name="email" required>
@@ -33,10 +33,7 @@
         <label>Password (repeat)</label>
         <input type="password" ng-model="repeatPassword" name="repeatPassword" required>
         <br>
-        <button ng-click="save()" ng-disabled="!canSave()">Save</button>
+        <button class='btn btn-primary'>Save</button>
       </form>
   </body>
-
-
-</body>
 </html>
