Removing angular routing

--- a/views/address-form.ejs
+++ b/views/address-form.ejs
@@ -1,26 +1,26 @@
 <ng-form name="addressForm">
 <div class="form-group">
-<label >Address Line1</label><input ng-model="user.address.addressLine1" type="text" required>
+<label >Address Line1</label><input name="addressLine1" ng-model="user.address.addressLine1" type="text" required>
 </div>
 <div class="form-group">
-<label >Address Line2</label><input ng-model="user.address.addressLine2" type="text">
+<label >Address Line2</label><input name="addressLine1" ng-model="user.address.addressLine2" type="text">
 </div>
 <div class="form-group">
-<label >Town/City</label><input ng-model="user.address.townorCity" type="text" required>
+<label >Town/City</label><input name="townorCity" ng-model="user.address.townorCity" type="text" required>
 </div>
 <div class="form-group">
-<label >State</label><input ng-model="user.address.state" type="text" required>
+<label >State</label><input name="state" ng-model="user.address.state" type="text" required>
 </div>
 <div class="form-group">
-<label >PinCode</label><input ng-model="user.address.pincode" type="text" required>
+<label >PinCode</label><input name="pincode" ng-model="user.address.pincode" type="text" required>
 </div>
 <div class="form-group">
-<label >Country</label><input ng-model="user.address.country" type="text" required>
+<label >Country</label><input name="country" ng-model="user.address.country" type="text" required>
 </div>
 <div class="form-group">
-<label >Mobile Number</label><input ng-model="user.address.mobileNumber" type="text" required>
+<label >Mobile Number</label><input name="mobileNumber" ng-model="user.address.mobileNumber" type="text" required>
 </div>
 <div class="form-group">
-<label >LandMark</label><input ng-model="user.address.landMark" type="text">
+<label >LandMark</label><input name="landMark" ng-model="user.address.landMark" type="text">
 </div>
 </ng-form>
