--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,18 +3,20 @@
 	One Store Home Page
 	@Author Ravi & Amar
 -->
-<html lang="en">
+<html lang="en" ng-app="oneStore">
 <head>
 	<title>One Store</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="stylesheets/style.css" />
 	<script src="javascripts/controller/homeCtrl.js"></script>
+	<script src="javascripts/angular-1.2.5/angular.js"></script>
+	<script src="javascripts/app.js"></script>
 </head>
-<body>
+<body ng-controller="homeCtrl">
 	<nav class="topright">
-		<a href="#login"><button class="btn btn-primary">Sign In</button></a>
-		<a href="#registration"><button class="btn btn-primary">Registration</button></a>
+		<a href="/login"><button class="btn btn-primary">Sign In</button></a>
+		<a href="/registration"><button class="btn btn-primary">Registration</button></a>
 	</nav>
 	<section id="header">
 		<header>
