--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,21 +1,27 @@
 <!doctype html>
-<html>
+<html ng-app="login">
 <head>
 	<title>Login</title>
 	<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="stylesheets/style.css" />
 	<script src="javascripts/angular-1.2.5/angular.js"></script>
+	<script src="javascripts/controller/loginCtrl.js"></script>
+	
 </head>
-<body>
+<body ng-controller="loginCtrl">
 	<div class="span7 center">
-		<form name="loginForm" class="well" ng-submit="login(user)">
-			<label>E-mail</label>
-			<input type="email" ng-model="user.login.id" class="span3" placeholder="E-mail here..." />
+		<form name="loginForm" class="well" method="post" action="/checkUser">
+		<div class="form-group" ng-class="{ 'has-error' : userInfoForm.email.$invalid && !userInfoForm.email.$pristine }">
+          <label>E-mail*</label>
+          <input type="email" ng-model="logindetails.email" class="form-control" placeholder="E-mail here..." name="email" required>
+          <p ng-show="userInfoForm.email.$invalid && !userInfoForm.email.$pristine" class="help-block">Email is required.</p>
+        </div>
+		<div class="form-group">
+        <label>Password</label>
+        <input type="password" data-ng-model="logindetails.password" id="password" name="password" placeholder="Password here..." required>
+        </div>
 			<br>
-			<label>Password</label>
-			<input type="password" ng-model="user.login.password" class="span3" placeholder="Password here..."/>
-			<br>
-			<button class="btn btn-primary">Sign in</button>
+			<button class="btn btn-primary" type='submit'>Sign in</button>
 			<!--<button class="btn">Clear</button>-->
 		</form>
 	</div>
