--- a/views/vendor-form.ejs
+++ b/views/vendor-form.ejs
@@ -1,6 +1,6 @@
   <ng-form name="vendorForm">
   <div class="form-group">
-  <label class="checkbox"><input type="checkbox" ng-model="user.home_Delivery" name="home_Delivery">Home delivery service</label>
+  <label class="checkbox"><input type="checkbox" name="home_Delivery" ng-model="user.home_Delivery" name="home_Delivery">Home delivery service</label>
   </div>
   <ng-include src="'/address-form'"/>
   </ng-form>
